Fixing align in course welcome pages

--- a/edx-platform/utec/lms/static/sass/_utec_overrides.scss
+++ b/edx-platform/utec/lms/static/sass/_utec_overrides.scss
@@ -157,6 +157,10 @@ header.header-global.slim {
   }
 }
 
+body.view-in-course .container .home {
+  max-width: 1180px;
+}
+
 //-----------------
 // Footer Styling
 //-----------------
